--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deploy": "npm run build && npm run export"
   },
   "dependencies": {
+    "@next/third-parties": "^15.1.6",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
@@ -20,11 +21,11 @@
     "lucide-react": "^0.471.1",
     "motion": "^11.18.0",
     "next": "15.1.4",
+    "next-export-i18n": "3.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "next-export-i18n": "3.0.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
